--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 astroid==2.2.5
 Django==2.2.4
+djangorestframework==3.10.2
 isort==4.3.21
 lazy-object-proxy==1.4.2
+Markdown==3.1.1
 mccabe==0.6.1
 pylint==2.3.1
 pytz==2019.2
